--- a/web/screens/medals/medals.css
+++ b/web/screens/medals/medals.css
@@ -7,5 +7,12 @@
 #medalbox {
     position: absolute;
     bottom:32vh;
-    left: 12vh;
+    left: 6.78vw;
+    transform: skew(0,-2.75deg); 
+}
+
+@media screen and (min-aspect-ratio: 20/9) {
+    #medalbox img{
+        width: 2.25vw;
+    }
 }
